@@ -81,6 +81,7 @@ sub renderUserLogin
         'plainURL'   => $Torrus::Renderer::plainURL,
         'style'      => sub { return $self->style($_[0]); },
         'companyName'=> $Torrus::Renderer::companyName,
+        'companyLogo'=> $Torrus::Renderer::companyLogo,
         'companyURL' => $Torrus::Renderer::companyURL,
         'siteInfo'   => $Torrus::Renderer::siteInfo,
         'version'    => $Torrus::Global::version,
@@ -181,6 +182,7 @@ sub renderTreeChooser
         'plainURL'   => $Torrus::Renderer::plainURL,
         'style'      => sub { return $self->style($_[0]); },
         'companyName'=> $Torrus::Renderer::companyName,
+        'companyLogo'=> $Torrus::Renderer::companyLogo,
         'companyURL' => $Torrus::Renderer::companyURL,
         'siteInfo'   => $Torrus::Renderer::siteInfo,
         'version'    => $Torrus::Global::version,
